melhorias na aparencia

--- a/index.html
+++ b/index.html
@@ -79,7 +79,6 @@
       </div>
     </section>
 
-
     <section class="trabalho" id="como-trabalho">
       <div class="container">
         <h2>Como eu Trabalho</h2>
@@ -87,10 +86,10 @@
 
 
           <div class="accordion-item">
-            <button class="accordion-header">
+            <div class="accordion-header">
               <img src="assets/img/icone1.png" alt="Visita Técnica">
               <span>Visita Técnica</span>
-            </button>
+            </div>
             <div class="accordion-content">
               <p>Preciso conhecer o seu local.</p>
               <p>Será feita uma avaliação dos ambientes, móveis, objetos...</p>
@@ -101,10 +100,10 @@
 
 
           <div class="accordion-item">
-            <button class="accordion-header">
+            <div class="accordion-header">
               <img src="assets/img/icone2.png" alt="Proposta">
               <span>Proposta</span>
-            </button>
+            </div>
             <div class="accordion-content">
               <p>Com todas as informações fornecidas pela(o) cliente, farei uma análise e irei elaborar o seu orçamento</p>
               <p>Será enviada uma proposta detalhada e personalizada de acordo com as suas necessidades.</p>
@@ -113,10 +112,10 @@
 
 
           <div class="accordion-item">
-            <button class="accordion-header">
+            <div class="accordion-header">
               <img src="assets/img/icone3.png" alt="Aprovação">
               <span>Aprovação</span>
-            </button>
+            </div>
             <div class="accordion-content">
               <p>Com a proposta aprovada, definiremos uma data para iniciarmos a organização.</p>
             </div>
@@ -124,10 +123,10 @@
 
 
           <div class="accordion-item">
-            <button class="accordion-header">
+            <div class="accordion-header">
               <img src="assets/img/icone4.png" alt="Planejamento">
               <span>Planejamento</span>
-            </button>
+            </div>
             <div class="accordion-content">
               <p>Podemos combinar se a compra de ítens organizadores será feita por você ou pela profissional. Se for por mim, usarei lojas parceiras e o valor do que for utilizado será repassado.</p>
             </div>
@@ -135,10 +134,10 @@
 
 
           <div class="accordion-item">
-            <button class="accordion-header">
+            <div class="accordion-header">
               <img src="assets/img/icone5.png" alt="Execução">
               <span>Execução</span>
-            </button>
+            </div>
             <div class="accordion-content">
               <p>A equipe irá executar a organização de acordo com o planejamento e expectativas combinadas.</p>
             </div>
@@ -203,7 +202,8 @@
       </div>
       <div class="coluna links-footer">
         <a href="#sobre">Sobre</a>
-        <a href="#depoimentos">Depoimentos</a>
+        <a href="#servicos">Serviços</a>
+        <a href="#como-trabalho">Como Trabalho</a>
         <a href="#organizacoes">Organizações</a>
         <a href="#contato">Contato</a>
       </div>
