--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
       <nav class="menu-central">
         <ul>
           <li><a href="#sobre">Sobre</a></li>
-          <li><a href="#depoimentos">Depoimentos</a></li>
+          <li><a href="#servicos">Serviços</a></li>
+          <li><a href="#como-trabalho">Trabalho</a></li>
           <li><a href="#organizacoes">Organizações</a></li>
           <li><a href="#contato">Contato</a></li>
         </ul>
