--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
     <section class="sobre" id="sobre">
       <div class="container">
         <div class="imagem">
-          <img src="assets/img/mamae.jpg" alt="Fabiana A C Tort" />
+          <img src="assets/img/mae.jpg" alt="Fabiana A C Tort" />
         </div>
         <div class="texto">
           <h2>Sobre</h2>
@@ -162,6 +162,21 @@
             <img src="assets/img/imagem-04.jpg" alt="Foto 4" />
             <img src="assets/img/imagem-05.jpg" alt="Foto 5" />
             <img src="assets/img/imagem-06.jpg" alt="Foto 6" />
+            <img src="assets/img/imagem-07.jpg" alt="Foto 7" />
+            <img src="assets/img/imagem-08.jpg" alt="Foto 8" />
+            <img src="assets/img/imagem-09.jpg" alt="Foto 9" />
+            <img src="assets/img/imagem-10.jpg" alt="Foto 10" />
+            <img src="assets/img/imagem-11.jpg" alt="Foto 11" />
+            <img src="assets/img/imagem-12.jpg" alt="Foto 12" />
+            <img src="assets/img/imagem-13.jpg" alt="Foto 13" />
+            <img src="assets/img/imagem-14.jpg" alt="Foto 14" />
+            <img src="assets/img/imagem-15.jpg" alt="Foto 15" />
+            <img src="assets/img/imagem-16.jpg" alt="Foto 16" />
+            <img src="assets/img/imagem-17.jpg" alt="Foto 17" />
+            <img src="assets/img/imagem-18.jpg" alt="Foto 18" />
+            <img src="assets/img/imagem-19.jpg" alt="Foto 19" />
+            <img src="assets/img/imagem-20.jpg" alt="Foto 20" />
+            <img src="assets/img/imagem-21.jpg" alt="Foto 21" />
           </div>
           <button class="seta direita" onclick="avancarSlide()">❯</button>
         </div>
@@ -222,7 +237,7 @@
           <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="#FFF4D8" viewBox="0 0 24 24">
             <path d="M20 4H4c-1.1 0-1.99.9-1.99 2L2 18a2 2 0 0 0 2 2h16c1.1 0 2-.9 2-2V6a2 2 0 0 0-2-2zm0 4l-8 5-8-5V6l8 5 8-5v2z"/>
           </svg>
-          fabiana.tort@gmail.com
+          fabiana.cozzolino@gmail.com
         </p>
        
         <p>
