alteração do arquivo da foto

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <section class="sobre" id="sobre">
       <div class="container">
         <div class="imagem">
-          <img src="assets/img/mae.jpg" alt="Fabiana A C Tort" />
+          <img src="assets/img/foto-mae.jpg" alt="Fabiana A C Tort" />
         </div>
         <div class="texto">
           <h2>Sobre</h2>
