--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
 
   <section class="hero">
     <div class="slideshow">
-      <img src="assets/img/imagem-10.jpg" class="slide active" alt="Imagem 1">
-      <img src="assets/img/imagem-11.jpg" class="slide" alt="Imagem 2">
-      <img src="assets/img/imagem-18.jpg" class="slide" alt="Imagem 3">
+      <img src="assets/img/imagem-18.jpg" class="slide active" alt="Imagem 1">
+      <img src="assets/img/imagem-10.jpg" class="slide" alt="Imagem 2">
+      <img src="assets/img/imagem-11.jpg" class="slide" alt="Imagem 3">
       <img src="assets/img/imagem-09.jpg" class="slide" alt="Imagem 4">
     </div>
   </section>
@@ -56,6 +56,7 @@
 
     <section class="servicos" id="servicos">
       <div class="container">
+        <h2 class="titulo-secao">Serviços</h2>
         <div class="servicos-grid">
           <div class="card-servico">
             <img src="assets/img/icone6.png" alt="Servico 1">
